Fixed the display of AlertDialg and Progress Window

--- a/LimeStudio/app/src/main/AndroidManifest.xml
+++ b/LimeStudio/app/src/main/AndroidManifest.xml
@@ -126,6 +126,7 @@
         </activity>
         -->
         <activity
+            android:theme="@style/Theme.AppCompat.Light"
             android:name=".limesettings.LIMEPreferenceHC"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/ime_setting" >
