--- a/LimeStudio/gradle/wrapper/gradle-wrapper.properties
+++ b/LimeStudio/gradle/wrapper/gradle-wrapper.properties
@@ -1,30 +1,6 @@
-#
-# /*
-#  *
-#  **    Copyright 2015, The LimeIME Open Source Project
-#  **
-#  **    Project Url: http://github.com/lime-ime/limeime/
-#  **                 http://android.toload.net/
-#  **
-#  **    This program is free software: you can redistribute it and/or modify
-#  **    it under the terms of the GNU General Public License as published by
-#  **    the Free Software Foundation, either version 3 of the License, or
-#  **    (at your option) any later version.
-#  *
-#  **    This program is distributed in the hope that it will be useful,
-#  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  **    GNU General Public License for more details.
-#  *
-#  **    You should have received a copy of the GNU General Public License
-#  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#  *
-#  */
-#
-
-#Wed Apr 10 15:27:10 PDT 2013
+#Sat Jun 18 12:31:33 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
