Finished themed candidate and composing view

--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -59,10 +59,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.google.android.gms:play-services:9.2.0'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.+'
+    compile 'com.android.support:support-v4:23.0.+'
+    compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.android.support:multidex:1.0.1'
     compile files('libs/commons-logging-1.1.1.jar')
     compile files('libs/google-api-client-1.20.0.jar')
     compile files('libs/google-api-client-android-1.20.0.jar')
