--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -61,8 +61,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.0.+'
-    compile 'com.android.support:support-v4:24.0.+'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:support-v4:24.1.1'
     compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.android.support:multidex:1.0.1'
     compile files('libs/commons-logging-1.1.1.jar')
