--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
         minSdkVersion 14
         targetSdkVersion 24
-        versionCode 524
+        versionCode 525
         versionName '5.2.0'
 
         multiDexEnabled true
@@ -60,7 +60,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
     compile 'com.google.android.gms:play-services:9.2.1'
