--- a/LimeStudio/app/src/main/AndroidManifest.xml
+++ b/LimeStudio/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="com.android.vending.BILLING" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+
     <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
     <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
     <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
@@ -160,10 +164,16 @@
             android:theme="@style/Theme.AppCompat.Transparent" >
         </activity>
 
+        <!--<receiver android:name=".readmoo.BootBroadcastReceiver">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+
         <service android:name=".readmoo.MooService"
             android:enabled="true">
             <intent-filter>
-                <action android:name="readmoo.ACTION_MOO_DOWNLOAD_IME" />
+                <action android:name="readmoo.ACTION_MOO_INSTALL_IME" />
             </intent-filter>
         </service>
 
