screen lock 開啟時, 避掉 unlock 前的 boot_completed 放大 mooInkPro 鍵盤 修改安裝提示對話框樣式

--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -54,18 +54,18 @@ android {
     flavorDimensions "default"
 
     productFlavors {
-        mooink {
+        mooInk {
             dimension "default"
         }
 
-        mooinkPlus {
+        mooInkPlus {
             dimension "default"
         }
 
-        mooinkPro {
+        mooInkPro {
             dimension "default"
-            resValue "string", "default_keyboard_size", "1.2"
-            resValue "string", "default_font_size", "1.2"
+            resValue "string", "default_keyboard_size", "1.5"
+            resValue "string", "default_font_size", "1.5"
         }
     }
     packagingOptions {
