--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -27,13 +27,12 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 29
     defaultConfig {
         applicationId "net.toload.main.hd"
 
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion 16
+        targetSdkVersion 29
         versionCode 526
         versionName '5.2.1'
 
@@ -61,10 +60,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:support-v4:24.1.1'
+    compile 'androidx.legacy:legacy-support-v4:1.0.0'
+    compile 'androidx.annotation:annotation:1.1.0'
     compile 'com.google.android.gms:play-services:9.2.1'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'androidx.multidex:multidex:2.0.1'
     compile files('libs/commons-logging-1.1.1.jar')
     compile files('libs/google-api-client-1.22.0.jar')
     compile files('libs/google-api-client-android-1.22.0.jar')
