--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -25,15 +25,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-    }
-    compileSdkVersion 27
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "net.toload.main.hd"
 
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 28
+        targetSdkVersion 28
         versionCode 528
         versionName '5.2.1'
 
@@ -52,12 +50,22 @@ android {
             keyAlias = 'platform'
             keyPassword = 'ntx'
         }
+
+        engPro2 {
+            storeFile = file('../mooInkPro2-eng.keystore')
+            storePassword =  'android'
+            keyAlias = 'platform'
+            keyPassword = 'android'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.engPro2
         }
     }
 
@@ -82,6 +90,13 @@ android {
             dimension "default"
             signingConfig signingConfigs.releaseC
         }
+
+        mooInkPro2 {
+            dimension "default"
+            resValue "string", "default_keyboard_size", "1.5"
+            resValue "string", "default_font_size", "1.5"
+        }
+
     }
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -96,41 +111,41 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    //compile 'com.google.android.gms:play-services-ads:12.0.1'
-    compile 'com.google.android.gms:play-services:9.2.1'
-    compile 'com.android.support:support-v4:27.1.1'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:multidex:1.0.1'
-    compile files('libs/commons-logging-1.1.1.jar')
-    compile files('libs/google-api-client-1.22.0.jar')
-    compile files('libs/google-api-client-android-1.22.0.jar')
-    compile files('libs/google-api-client-appengine-1.22.0.jar')
-    compile files('libs/google-api-client-gson-1.22.0.jar')
-    compile files('libs/google-api-client-jackson2-1.22.0.jar')
-    compile files('libs/google-api-client-java6-1.22.0.jar')
-    compile files('libs/google-api-client-servlet-1.22.0.jar')
-    compile files('libs/google-http-client-1.22.0.jar')
-    compile files('libs/google-http-client-android-1.22.0.jar')
-    compile files('libs/google-http-client-appengine-1.22.0.jar')
-    compile files('libs/google-http-client-gson-1.22.0.jar')
-    compile files('libs/google-http-client-jackson2-1.22.0.jar')
-    compile files('libs/google-http-client-jdo-1.22.0.jar')
-    compile files('libs/google-oauth-client-1.22.0.jar')
-    compile files('libs/google-oauth-client-appengine-1.22.0.jar')
-    compile files('libs/google-oauth-client-java6-1.22.0.jar')
-    compile files('libs/google-oauth-client-jetty-1.22.0.jar')
-    compile files('libs/google-oauth-client-servlet-1.22.0.jar')
-    compile files('libs/gson-2.1.jar')
-    compile files('libs/httpclient-4.0.1.jar')
-    compile files('libs/httpcore-4.0.1.jar')
-    compile files('libs/jackson-core-2.1.3.jar')
-    compile files('libs/jdo2-api-2.3-eb.jar')
-    compile files('libs/jetty-6.1.26.jar')
-    compile files('libs/jetty-util-6.1.26.jar')
-    compile files('libs/jsr305-1.3.9.jar')
-    compile files('libs/google-api-services-drive-v2-rev230-1.22.0.jar')
-    compile files('libs/httpmime-4.0.3.jar')
-    compile files('libs/dropbox-android-sdk-1.6.3.jar')
-    compile files('libs/json_simple-1.1.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //implementation 'com.google.android.gms:play-services-ads:12.0.1'
+    implementation 'com.google.android.gms:play-services:9.2.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:multidex:1.0.1'
+    implementation files('libs/commons-logging-1.1.1.jar')
+    implementation files('libs/google-api-client-1.22.0.jar')
+    implementation files('libs/google-api-client-android-1.22.0.jar')
+    implementation files('libs/google-api-client-appengine-1.22.0.jar')
+    implementation files('libs/google-api-client-gson-1.22.0.jar')
+    implementation files('libs/google-api-client-jackson2-1.22.0.jar')
+    implementation files('libs/google-api-client-java6-1.22.0.jar')
+    implementation files('libs/google-api-client-servlet-1.22.0.jar')
+    implementation files('libs/google-http-client-1.22.0.jar')
+    implementation files('libs/google-http-client-android-1.22.0.jar')
+    implementation files('libs/google-http-client-appengine-1.22.0.jar')
+    implementation files('libs/google-http-client-gson-1.22.0.jar')
+    implementation files('libs/google-http-client-jackson2-1.22.0.jar')
+    implementation files('libs/google-http-client-jdo-1.22.0.jar')
+    implementation files('libs/google-oauth-client-1.22.0.jar')
+    implementation files('libs/google-oauth-client-appengine-1.22.0.jar')
+    implementation files('libs/google-oauth-client-java6-1.22.0.jar')
+    implementation files('libs/google-oauth-client-jetty-1.22.0.jar')
+    implementation files('libs/google-oauth-client-servlet-1.22.0.jar')
+    implementation files('libs/gson-2.1.jar')
+    implementation files('libs/httpclient-4.0.1.jar')
+    implementation files('libs/httpcore-4.0.1.jar')
+    implementation files('libs/jackson-core-2.1.3.jar')
+    implementation files('libs/jdo2-api-2.3-eb.jar')
+    implementation files('libs/jetty-6.1.26.jar')
+    implementation files('libs/jetty-util-6.1.26.jar')
+    implementation files('libs/jsr305-1.3.9.jar')
+    implementation files('libs/google-api-services-drive-v2-rev230-1.22.0.jar')
+    implementation files('libs/httpmime-4.0.3.jar')
+    implementation files('libs/dropbox-android-sdk-1.6.3.jar')
+    implementation files('libs/json_simple-1.1.jar')
 }
