--- a/LimeStudio/app/src/main/AndroidManifest.xml
+++ b/LimeStudio/app/src/main/AndroidManifest.xml
@@ -178,6 +178,14 @@
             </intent-filter>
         </service>
 
+        <service android:name=".readmoo.MooJobIntentService"
+            android:enabled="true"
+            android:permission="android.permission.BIND_JOB_SERVICE">
+            <intent-filter>
+                <action android:name="readmoo.ACTION_MOO_INSTALL_IME" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
