--- a/LimeStudio/app/src/main/AndroidManifest.xml
+++ b/LimeStudio/app/src/main/AndroidManifest.xml
@@ -54,8 +54,8 @@
         android:allowBackup="true"
         android:name="android.support.multidex.MultiDexApplication"
         android:backupAgent=".LIMEBackupAgent"
-        android:directBootAware="true"
-        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="false"
+        android:defaultToDeviceProtectedStorage="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
